# utilWidgets

./: CMakeLists.txt  LICENSE  README.md  utilWidgets.pri
include/: CustomTreeWidget.h  utilWidgetsBases.h  utils.h
